[package]
name = "bns-route"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
async-trait="0.1.52"
dashmap = "4"
log = "0.4"
serde_json = { version="1.0.70"}
serde = { version = "1.0.130", features = ["derive"]}
webrtc = { version = "0.3.3"}
tokio = { version = "1.13.0", features = ["full"]}
tokio-util = { version = "0.6.9"}
bytes = { version="1.1.0"}
async-channel = {version="1.6.1"}
web3 = { package="web3", version = "0.18.0", features = ["wasm"], default-features=false}
